--- a/icechallenges/styles/ICE_challenge.css
+++ b/icechallenges/styles/ICE_challenge.css
@@ -1,13 +1,21 @@
 body {
     background-color: #5CA1D7;
     color: white;
+
+}
+
+main {
+    max-width: 600px;
+    margin: 0 auto;
+    text-align: center;
 }
 
 .top {
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 800;
+    display: inline;
     width: 200px;
-    margin: 0 auto;
+    text-align: center;
 }
 
 .top:hover {
@@ -26,7 +34,7 @@ body {
     font-weight: bold;
     line-height: 1.5;
     margin-block-start: 2em;
-    padding-left: 40%;
+    padding-left: 15%;
 }
 
 .quote {
@@ -36,8 +44,8 @@ body {
 }
 
 #prophet {
-    max-width: 10%;
-    max-height: 10%;
+    max-width: 30%;
+    max-height: 30%;
 }
 
 footer {
