--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -1,25 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Rye&family=Yrsa:ital,wght@0,300..700;1,300..700&display=swap');
+
 #content {
     max-width: 1600px;
     margin: 0 auto;
 }
 
-.logo {
-    width: 80px;
-}
-
-nav a {
-    text-align: center;
-    color: #cad2c5;
-    text-decoration: none;
-}
-
-nav a:hover {
-    background-color: #cad2c5;
-    color: black;
-}
-
 .home-title {
     color: black;
+    font-family: Rye, 'Times New Roman', Times, serif;
+    font-size: 2em;
+    margin-top: 10px;
 }
 
 #hero-msg h1, #hero-msg h4 {
@@ -38,6 +28,10 @@ main section {
     text-align: center;
 }
 
+main section img {
+    box-sizing: border-box;
+}
+
 #background {
     height: 725px;
     background-color: #354f52;
@@ -45,22 +39,80 @@ main section {
 
 body {
     background-color: #cad2c5;
+    font-family: Yrsa, Helvetica, sans-serif;
+    font-size: 22px;
+    margin: 0;
+    padding: 0;
+}
+
+h2 {
+    margin: 0;
 }
 
 header {
     background-color: #354f52;
+    text-align: center;
+}
+
+.logo {
+    width: 80px;
+    padding-bottom: 35px;
+}
+
+#logo_link {
+    padding-bottom: 35px;
+}
+
+nav a {
+    text-align: center;
+    color: #cad2c5;
+    text-decoration: none;
+    font-size: 35px;
+    font-family: Yrsa, Helvetica, sans-serif;
+    padding: 25px;
+}
+
+nav a:hover {
+    background-color: #52796f;
+    color: black;
+}
+
+.card-img {
+    border: 10px solid #52796f;
+}
+
+.rivers-card {
+    margin: 200px 0;
+}
+
+.camping-card {
+    margin: 200px 0;
+}
+
+.rapids-card {
+    margin: 200px 0;
 }
 
 .book {
-    background-color: #cad2c5;
-    color: #354f52;
-    text-decoration: none;
-}
-
-.join {
     background-color: #52796f;
     color: #cad2c5;
     text-decoration: none;
+    font-size: 35px;
+    font-family: Yrsa, Helvetica, sans-serif;
+    padding: 15px 30px;
+    margin-top: 50px;
+    border-radius: 5px;
+}
+
+.join {
+    background-color: #355249;
+    color: #cad2c5;
+    text-decoration: none;
+    font-size: 35px;
+    font-family: Yrsa, Helvetica, sans-serif;
+    padding: 15px 30px;
+    margin-top: 50px;
+    border-radius: 5px;
 
 }
 
@@ -74,14 +126,44 @@ header {
     color: black;
 }
 
+.icon {
+    padding-top: 10px;
+}
+
+#background {
+    margin-bottom: 50px;
+}
+
+.mountains {
+    margin-bottom: 35px;
+}
+
 .msg {
     background-color: #52796f;
-    color: white;
+    line-height: 1.5em;
+    color: #cad2c5;
+    font-family: Yrsa, Helvetica, sans-serif;
+    padding: 35px;
+
+}
+
+.msg h2 {
+    color: rgb(160, 230, 174);
+    line-height: 1.5em;
+    font-family: Rye, 'Times New Roman', Times, serif;
+
+}
+
+.home-grid {
+    font-family: Rye, 'Times New Roman', Times, serif;
 }
 
 footer {
     background-color: #354f52;
     color: white;
+    font-family: Yrsa, Helvetica, sans-serif;
+    padding: 25px 50px;
+    margin-top: 200px;
 }
 
 
