--- a/personal/styles/site-plan.css
+++ b/personal/styles/site-plan.css
@@ -29,6 +29,10 @@ Fonts are separated by a & */
 
 /*  Look around below...but DON'T CHANGE ANYTHING! */
 
+.image_crop {
+  max-width: 800px;
+}
+
 body {
   max-width: 1200px;
   margin: 0 auto;
