--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -233,7 +233,6 @@ footer {
     align-items: center;
 }
 
-
 footer a {
     color: #cad2c5;
     text-decoration: none;
@@ -247,6 +246,66 @@ footer a:hover {
 footer p a:hover {
     text-decoration: underline;
 }    
+
+/* Code for 2nd page */
+
+.home-grid2 {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 825px 150px;
+    column-gap: 25px;
+    justify-items: center;
+    margin: 0 auto;
+    margin-top: 75px;
+}
+
+.home-title2 {
+    background-color: #354f52;
+    color: whitesmoke;
+    font-family: Rye, 'Times New Roman', Times, serif;
+    font-size: 2em;
+    width: 600px;
+    margin: 0 auto;
+    margin-top: 50px;
+    text-align: center;
+    padding: 15px;
+}
+
+li {
+    text-align: left;
+    color: #cad2c5;
+    width: 300px;
+    margin: 0 auto;
+}
+
+.button-box2 {
+    margin-top: 35px;
+    text-align: center;
+}
+
+.card-img-3 {
+    border: 10px solid #52796f;
+    margin-top: 50px;
+
+}
+
+.card-3 {
+    background-color: #354f52;
+    width: 400px;
+    font-family: Rye, 'Times New Roman', Times, serif;
+    transition: transform .5s;
+    color: white;
+}
+
+.card-3:hover {
+    transform: scale(1.1);
+}
+
+.bottom_text {
+    grid-column: 1/4;
+    grid-row: 2/3;
+    padding-top: 50px;
+}
 
 @media screen and (max-width: 900px) {
     #hero, .home-grid {
