--- a/personal/styles/style.css
+++ b/personal/styles/style.css
@@ -9,7 +9,7 @@ header {
     display: grid;
     grid-template-columns: 150px auto;
     grid-template-rows: 100px;
-    background-color: #354f52;
+    background-color: #023047;
     text-align: center;
     height: 100px;
 }
@@ -33,7 +33,7 @@ nav {
 
 nav a {
     text-align: center;
-    color: #cad2c5;
+    color: #FFB703;
     text-decoration: none;
     font-size: 35px;
     font-family: Yrsa, Helvetica, sans-serif;
@@ -43,8 +43,8 @@ nav a {
 }
 
 nav a:hover {
-    background-color: #52796f;
-    color: black;
+    background-color: #8ECAE6;
+    color: #FB8500;
 }
 
 #hero-box {
@@ -85,4 +85,25 @@ nav a:hover {
     max-width: 1600px;
     grid-column: 1/3;
     grid-row: 1/2;
+}
+
+#background {
+  background-color: #FB8500;
+  height: 400px;
+}
+
+/* remove this or change it when working on final CSS formatting*/
+img {
+  max-width: 300px;
+}
+
+footer {
+  background-color: #023047;
+  color: white;
+  font-family: Yrsa, Helvetica, sans-serif;
+  padding: 25px 50px;
+  margin-top: 200px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
