--- a/personal/styles/style.css
+++ b/personal/styles/style.css
@@ -1,12 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Bowlby+One+SC&display=swap');
 
+body {
+  margin: 0;
+  padding: 0;
+}
+
 #content {
     max-width: 1600px;
-    margin: 0 auto;
 }
 
 header {
     display: grid;
+    font-family: "Amatic SC", sans-serif;
     grid-template-columns: 150px auto;
     grid-template-rows: 100px;
     background-color: #023047;
@@ -35,22 +40,22 @@ nav a {
     text-align: center;
     color: #FFB703;
     text-decoration: none;
-    font-size: 35px;
-    font-family: Yrsa, Helvetica, sans-serif;
+    font-size: 30px;
+    font-family: "Bowlby One SC", sans-serif;
     height: 75px;
-    width: 160px;
+    width: 250px;
     padding-top: 25px;
 }
 
 nav a:hover {
-    background-color: #8ECAE6;
+    background-color: #0e142b;
     color: #FB8500;
 }
 
 #hero-box {
     display: grid;
-    grid-template-columns: 600px 600px;
-    width: 100%;
+    grid-template-columns: 800px 800px;
+    max-width: 1600px;
 }
 
 .top {
@@ -59,7 +64,7 @@ nav a:hover {
     animation-iteration-count: infinite;
     animation-duration: 10s;
     animation-direction: alternate;
-    max-width: 1600px;
+    max-width: 1520px;
     z-index: 1;
     grid-column: 1/3;
     grid-row: 1/2;
@@ -82,28 +87,101 @@ nav a:hover {
 
 .bottom {
     z-index: 0;
-    max-width: 1600px;
+    max-width: 1520px;
     grid-column: 1/3;
     grid-row: 1/2;
 }
 
-#background {
-  background-color: #FB8500;
-  height: 400px;
+h1 {
+  font-family: "Bowlby One SC", sans-serif;
+  text-align: center;
+  border: 15px solid #023047;
+  letter-spacing: 2px;
+  border-radius: 15%;
+  font-size: 45px;
+  margin: 100px auto;
+  width: 800px;
 }
 
-/* remove this or change it when working on final CSS formatting*/
-img {
-  max-width: 300px;
+#background {
+  background-color: #FB8500;
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  margin-top: 80px;
+  max-width: 1600px;
+  height: 600px;
+  justify-items: center;
+  align-items: center;
+}
+
+.msg {
+  grid-column: 2/3;
+}
+
+.msg h2 {
+  font-family: "Bowlby One SC", sans-serif;
+  color: white;
+  font-size: 45px;
+  text-align: center;
+  margin: 0 auto;
+  width: 1000px;
+  letter-spacing: 2px;
+}
+
+.msg p {
+  font-size: 35px;
+  font-family: "Amatic SC", sans-serif;
+  text-align: left;
+  font-weight: bold;
+  margin: 35px auto;
+  width: 500px;
+}
+
+#background img {
+  max-width: 400px;
+  margin: 25px;
+  grid-column: 1/2;
+  justify-self: center;
+  box-shadow: 5px 5px 10px #023047;
+  transition: transform .5s;
+  
+}
+
+#background img:hover{
+  transform: scale(1.1);
+}
+
+.divided_list {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  font-family: "Amatic SC", sans-serif;
+  font-weight: bold;
+  font-size: 35px;
 }
 
 footer {
   background-color: #023047;
   color: white;
-  font-family: Yrsa, Helvetica, sans-serif;
+  font-family: "Amatic SC", sans-serif;
   padding: 25px 50px;
-  margin-top: 200px;
+  margin-top: 140px;
   display: flex;
   justify-content: space-around;
   align-items: center;
+  font-size: 25px;
 }
+
+footer a {
+  color: #cad2c5;
+  text-decoration: none;
+  font-size: 40px;
+}
+
+footer a:hover {
+  background-color: #8ECAE6;
+  color: black;
+}
+
+footer p a:hover {
+  text-decoration: underline;
+}    
