--- a/personal/styles/style.css
+++ b/personal/styles/style.css
@@ -185,3 +185,141 @@ footer a:hover {
 footer p a:hover {
   text-decoration: underline;
 }    
+
+/* Styles for 2nd page */
+
+.content2 {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
+  row-gap: 50px;
+  column-gap: 60px;
+  justify-self: center;
+}
+
+.map {
+  margin: 25px;
+
+}
+
+#section2 {
+  background-color: #023047;
+  width: 400px;
+  height: 600px;
+  transition: transform .5s;
+  border-radius: 5%;
+}
+
+#section2:hover {
+  transform: scale(1.1);
+}
+
+.last_card  {
+  background-color: #023047;
+  width: 400px;
+  height: 600px;
+  transition: transform .5s;
+  border-radius: 5%;
+  grid-column: 2/3;
+}
+
+.last_card:hover {
+  transform: scale(1.1);
+}
+
+section h2 {
+  color: white;
+  font-family: "Bowlby One SC", sans-serif;
+  text-align: center;
+  letter-spacing: 2px;
+}
+
+/** CSS for last page **/
+* {box-sizing:border-box}
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+}
+
+/* Hide the images by default */
+.mySlides1 .mySlides2 .mySlides3 .mySlides4 {
+  display: none;
+}
+
+/* Next & previous buttons */
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -22px;
+  padding: 16px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+/* Position the "next button" to the right */
+
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+}
+
+/* Caption text */
+.text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active, .dot:hover {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
+}
