--- a/personal/styles/style.css
+++ b/personal/styles/style.css
@@ -6,7 +6,7 @@ body {
 }
 
 #content {
-    max-width: 1600px;
+    max-width: 1400px;
 }
 
 header {
@@ -17,6 +17,7 @@ header {
     background-color: #023047;
     text-align: center;
     height: 100px;
+    width: 100vw;
 }
 
 .logo {
@@ -64,7 +65,7 @@ nav a:hover {
     animation-iteration-count: infinite;
     animation-duration: 10s;
     animation-direction: alternate;
-    max-width: 1520px;
+    width: 100vw;
     z-index: 1;
     grid-column: 1/3;
     grid-row: 1/2;
@@ -87,7 +88,7 @@ nav a:hover {
 
 .bottom {
     z-index: 0;
-    max-width: 1520px;
+    width: 100vw;
     grid-column: 1/3;
     grid-row: 1/2;
 }
@@ -108,7 +109,7 @@ h1 {
   display: grid;
   grid-template-columns: 1fr 2fr;
   margin-top: 80px;
-  max-width: 1600px;
+  width: 100vw;
   height: 600px;
   justify-items: center;
   align-items: center;
@@ -124,7 +125,8 @@ h1 {
   font-size: 45px;
   text-align: center;
   margin: 0 auto;
-  width: 1000px;
+  width: 100vw;
+  max-width: 1000px;
   letter-spacing: 2px;
 }
 
@@ -134,7 +136,8 @@ h1 {
   text-align: left;
   font-weight: bold;
   margin: 35px auto;
-  width: 500px;
+  width: 100vw;
+  max-width: 500px;
 }
 
 #background img {
@@ -152,6 +155,7 @@ h1 {
 }
 
 .divided_list {
+  margin: 0 auto;
   display: grid;
   grid-template-columns: 1fr 1fr;
   font-family: "Amatic SC", sans-serif;
@@ -169,6 +173,7 @@ footer {
   justify-content: space-around;
   align-items: center;
   font-size: 25px;
+  width: 100vw;
 }
 
 footer a {
