--- a/personal/styles/style.css
+++ b/personal/styles/style.css
@@ -250,7 +250,7 @@ section h2 {
 }
 
 /* Hide the images by default */
-.mySlides1 .mySlides2 .mySlides3 .mySlides4 {
+.mySlides1 .mySlides2 .mySlides3 .mySlides4 .mySlides5 .mySlides6 .mySlides7 {
   display: none;
 }
 
@@ -327,4 +327,20 @@ section h2 {
 @keyframes fade {
   from {opacity: .4}
   to {opacity: 1}
+}
+
+
+@media screen and (max-width: 1000px) {
+    .content2 {
+      width: 80%;
+      display: block;
+      margin: 0 auto;
+    }
+    .last_card {
+      display: block;
+      margin: 50px;
+    }
+    #section2 {
+      margin: 50px;
+    }
 }
