--- a/personal/styles/style.css
+++ b/personal/styles/style.css
@@ -6,7 +6,7 @@ body {
 }
 
 #content {
-    max-width: 1400px;
+    width: 1400px;
 }
 
 header {
@@ -51,6 +51,7 @@ nav a {
 nav a:hover {
     background-color: #0e142b;
     color: #FB8500;
+    padding-bottom: 75px;
 }
 
 #hero-box {
@@ -63,15 +64,15 @@ nav a:hover {
     animation-name: fade;
     animation-timing-function: ease-in-out;
     animation-iteration-count: infinite;
-    animation-duration: 10s;
+    animation-duration: 15s;
     animation-direction: alternate;
     width: 100vw;
     z-index: 1;
     grid-column: 1/3;
     grid-row: 1/2;
-  }
+}
   
-  @keyframes fade {
+@keyframes fade {
     0% {
       opacity: 1;
     }
@@ -84,7 +85,7 @@ nav a:hover {
     100% {
       opacity: 0;
     }
-  }
+}
 
 .bottom {
     z-index: 0;
@@ -197,6 +198,7 @@ footer p a:hover {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr 1fr;
+  margin: 30px;
   row-gap: 50px;
   column-gap: 60px;
   justify-self: center;
@@ -239,22 +241,51 @@ section h2 {
   letter-spacing: 2px;
 }
 
+.caption {
+  color: white;
+  font-size: 50px;
+}
+
 /** CSS for last page **/
+.content3 {
+  display: grid;
+  margin: 30px;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  row-gap: 50px;
+  column-gap: 60px;
+}
+
+.section3 {
+  background-color: #023047;
+  width: 700px;
+  height: 700px;
+  padding: 25px;
+  border-radius: 5%;
+}
+
+.last_card2  {
+  background-color: #023047;
+  width: 700px;
+  height: 700px;
+  padding: 25px;
+  border-radius: 5%;
+  margin: 50px auto;
+}
+
+
 * {box-sizing:border-box}
 
-/* Slideshow container */
 .slideshow-container {
   max-width: 1000px;
   position: relative;
   margin: auto;
 }
 
-/* Hide the images by default */
 .mySlides1 .mySlides2 .mySlides3 .mySlides4 .mySlides5 .mySlides6 .mySlides7 {
   display: none;
 }
 
-/* Next & previous buttons */
 .prev, .next {
   cursor: pointer;
   position: absolute;
@@ -270,30 +301,15 @@ section h2 {
   user-select: none;
 }
 
-/* Position the "next button" to the right */
-
 .next {
   right: 0;
   border-radius: 3px 0 0 3px;
 }
 
-/* On hover, add a black background color with a little bit see-through */
 .prev:hover, .next:hover {
   background-color: rgba(0,0,0,0.8);
 }
 
-/* Caption text */
-.text {
-  color: #f2f2f2;
-  font-size: 15px;
-  padding: 8px 12px;
-  position: absolute;
-  bottom: 8px;
-  width: 100%;
-  text-align: center;
-}
-
-/* Number text (1/3 etc) */
 .numbertext {
   color: #f2f2f2;
   font-size: 12px;
@@ -302,7 +318,6 @@ section h2 {
   top: 0;
 }
 
-/* The dots/bullets/indicators */
 .dot {
   cursor: pointer;
   height: 15px;
@@ -318,7 +333,6 @@ section h2 {
   background-color: #717171;
 }
 
-/* Fading animation */
 .fade {
   animation-name: fade;
   animation-duration: 1.5s;
@@ -335,6 +349,25 @@ section h2 {
       width: 80%;
       display: block;
       margin: 0 auto;
+    }
+
+    .content3 {
+      width: 80%;
+      display: block;
+      margin-bottom: 50px;
+
+    }
+    .last_card2 {
+      display: block;
+      margin: 50px;
+    }
+
+    #background {
+      background-color: #FB8500;
+      display: block;
+      margin-top: 80px;
+      width: 100vw;
+      height: 1100px;
     }
     .last_card {
       display: block;
