--- a/personal/styles/style.css
+++ b/personal/styles/style.css
@@ -351,12 +351,20 @@ section h2 {
       margin: 0 auto;
     }
 
+    h1 {
+      margin: 25px;
+    }
+
     .content3 {
       width: 80%;
       display: block;
-      margin-bottom: 50px;
-
+      margin: 50px;
     }
+
+    .section3 {
+      margin-bottom: 50px;
+    }
+
     .last_card2 {
       display: block;
       margin: 50px;
